--- a/package.json
+++ b/package.json
@@ -2,9 +2,19 @@
   "name": "arkly-dev",
   "version": "1.0.0",
   "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
+  },
   "dependencies": {
-    "react": "^18.0.0",
-    "next": "^13.0.0",
-    "tailwindcss": "^3.0.0"
+    "next": "^13.4.12",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.3.2",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.24"
   }
 }
